--- a/src/classes/AccountTriggerHelper.cls
+++ b/src/classes/AccountTriggerHelper.cls
@@ -2,9 +2,8 @@
 public with sharing class AccountTriggerHelper {
 
     public static void sendDataToExactOnline(List<Account> records) {
-        String query = 'SELECT Name FROM Account WHERE WHERE ExactId__c = NULL';
-        String sObjectName = 'Account';
-        Id batchInstanceId = Database.executeBatch(new BatchSendAccountsToExactOnline(query, sObjectName));
+        String query = 'SELECT Name, VATNumber__c , Description, BillingCity  FROM Account WHERE Phone = NULL';
+        Id batchInstanceId = Database.executeBatch(new BatchSendAccountsToExactOnline(BatchSendAccountsToExactOnline.Batchmode.ACCOUNTS,query));
     }
 
 }
