--- a/src/classes/BatchSendAccountsToExactOnline.cls
+++ b/src/classes/BatchSendAccountsToExactOnline.cls
@@ -1,11 +1,14 @@
 
 public with sharing class BatchSendAccountsToExactOnline implements Database.Batchable<SObject>, Database.AllowsCallouts {
+    public final String BATCH_MODE_EXC = 'UNSUPPORTED mode. BatchSendAccountsToExactOnline have problems with mode param';
+    public enum Batchmode {ACCOUNTS, CASES, SUBSCRIPTION}
     public final String QUERY;
-    public final String sObjectName;
 
-    public BatchSendAccountsToExactOnline (String query, String sObjectName){
+    Batchmode mode;
+
+    public BatchSendAccountsToExactOnline (Batchmode mode, String query){
+        this.mode = mode;
         this.QUERY = query;
-        this.sObjectName = sObjectName;
     }
 
     public Database.QueryLocator start(Database.BatchableContext bc) {
@@ -14,18 +17,26 @@ public with sharing class BatchSendAccountsToExactOnline implements Database.Bat
     public void execute(Database.BatchableContext bc, List<SObject> records) {
         ConnectWithExactonline postRequest = new ConnectWithExactonline();
         for (SObject obj: records){
-            switch on sObjectName {
-                when 'Account' {
-                    postRequest.postAccountToExactOnline((Account) obj);
+            switch on this.mode {
+                when ACCOUNTS {
+                    StaticResource jsonSR = [SELECT Body FROM StaticResource WHERE Name = 'AccountMapping' LIMIT 1];
+                    String body = jsonSR.Body.toString();
+                    Map<String, Object> objectMap = (Map<String, Object>) JSON.deserializeUntyped(body);
+                    postRequest.postAccountToExactOnline((Account) obj, objectMap, 'Account');
                 }
-                when 'Case' {
-                    postRequest.postOrderToExactOnline((Order) obj);
+                when CASES {
+                    StaticResource jsonSR = [SELECT Body FROM StaticResource WHERE Name = 'CaseMapping' LIMIT 1];
+                    String body = jsonSR.Body.toString();
+                    Map<String, Object> objectMap = (Map<String, Object>) JSON.deserializeUntyped(body);
+                    postRequest.postAccountToExactOnline((Account) obj, objectMap, 'Case');
                 }
-                when 'Subscription' {
-                    postRequest.postAccountToExactOnline((Account) obj);
-                }
+                when SUBSCRIPTION {
+                    StaticResource jsonSR = [SELECT Body FROM StaticResource WHERE Name = 'SubscriptionMapping' LIMIT 1];
+                    String body = jsonSR.Body.toString();
+                    Map<String, Object> objectMap = (Map<String, Object>) JSON.deserializeUntyped(body);
+                    postRequest.postAccountToExactOnline((Account) obj, objectMap, 'Subscription');                }
                 when else {
-                    System.debug('null point Exception');
+                    throw new BatchSendAccountsToExactOnlineException(BATCH_MODE_EXC);
                 }
             }
         }
