--- a/src/classes/ConnectWithExactonline.cls
+++ b/src/classes/ConnectWithExactonline.cls
@@ -8,20 +8,31 @@ public with sharing class ConnectWithExactonline {
         Http http = new Http();
         HttpResponse res = http.send(request);
         System.debug(res.getBody());
+        String jsonST = JSON.serialize([SELECT Body FROM StaticResource WHERE Name = 'AccountMapping' LIMIT 1]);
     }
 
-    public void postAccountToExactOnline(Account record) {
-        Map<String, Object> objectMap = new Map<String, Object>{
-                'Name' => record.Name,
-                'City' => record.BillingCity,
-                'Country' => record.Description
-        };
+    public void postAccountToExactOnline(SObject record, Map<String, Object> jsonMapping, String sObjectName) {
+        Map<String, Object> requestMap = new Map<String, Object>();
+        Map<String, Object> recordsMap = new Map<String, Object>(record.getPopulatedFieldsAsMap());
+        for (String key : jsonMapping.keySet()) {
+            requestMap.put(key, recordsMap.get((String) jsonMapping.get(key)));
+        }
 
         HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:Exactonline_Test/api/v1/2844363/crm/Accounts');
+        switch on sObjectName {
+            when 'Account' {
+                request.setEndpoint('callout:Exactonline_Test/api/v1/2844363/crm/Accounts');
+            }
+            when 'Case' {
+                request.setEndpoint('callout:Exactonline_Test/api/v1/2844363/crm/Accounts');
+            }
+            when 'Subscription' {
+                request.setEndpoint('callout:Exactonline_Test/api/v1/2844363/crm/Accounts');
+            }
+        }
         request.setHeader('Content-Type', 'application/json');
-        request.setHeader('Accept', '');
-        request.setBody(JSON.serialize(objectMap));
+        request.setHeader('Accept', 'application/json');
+        request.setBody(JSON.serialize(requestMap));
         request.setMethod('POST');
 
         Http http = new Http();
@@ -31,77 +42,11 @@ public with sharing class ConnectWithExactonline {
             System.debug('The status code returned was not expected: ' +
                     response.getStatusCode() + ' ' + response.getStatus());
         } else {
-            Dom.Document doc = response.getBodyDocument();
-            Dom.XmlNode address = doc.getRootElement();
-            Dom.XmlNode get1 = address.getChildElement('content', null);
-            Dom.XmlNode get2 = get1.getChildElement('m:properties', null);
-            String AccId = get2.getChildElement('d:ID', null).getText();
-//            Dom.XmlNode hfhf = gfgf.getChildElement('properties',  null);
-//            System.debug('properties' + hfhf);
-//            Dom.XmlNode dataele= address.getChildElement('content',null);
-//            Dom.XmlNode rere= dataele.getChildElement('m',null);
-//            String Id = rere.getChildElement('d', 'ID').getText();
-//            System.debug(Id);
-            record.ExactId__c = AccId;
+            Map<String, Object> responseMap = (Map<String, Object>) JSON.deserializeUntyped(response.getBody());
+            Map<String, Object> responseParams = (Map<String, Object>) responseMap.get('d');
+            String exactAccountId = (String) responseParams.get('ID');
+            record.put('ExactId__c', exactAccountId);
             update record;
-        }
-    }
-
-    public void postOrderToExactOnline(Order record) {
-        Map<String, Object> objectMap = new Map<String, Object>{
-                'Name' => record.Name,
-                'City' => record.BillingCity,
-                'Country' => record.Description
-        };
-
-        HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:Exactonline_Test/api/v1/2844363/crm/Accounts');
-        request.setHeader('Content-Type', 'application/json');
-        request.setHeader('Accept', '');
-        request.setBody(JSON.serialize(objectMap));
-        request.setMethod('POST');
-
-        Http http = new Http();
-        HttpResponse response = http.send(request);
-
-        if (response.getStatusCode() != 201) {
-            System.debug('The status code returned was not expected: ' +
-                    response.getStatusCode() + ' ' + response.getStatus());
-        } else {
-            Dom.Document doc = response.getBodyDocument();
-            Dom.XmlNode address = doc.getRootElement();
-            Dom.XmlNode get1 = address.getChildElement('content', null);
-            Dom.XmlNode get2 = get1.getChildElement('m:properties', null);
-            String AccId = get2.getChildElement('d:ID', null).getText();
-        }
-    }
-
-    public void postSubscriptionToExactOnline(Account record) {
-        Map<String, Object> objectMap = new Map<String, Object>{
-                'Name' => record.Name,
-                'City' => record.BillingCity,
-                'Country' => record.Description
-        };
-
-        HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:Exactonline_Test/api/v1/2844363/crm/Accounts');
-        request.setHeader('Content-Type', 'application/json');
-        request.setHeader('Accept', '');
-        request.setBody(JSON.serialize(objectMap));
-        request.setMethod('POST');
-
-        Http http = new Http();
-        HttpResponse response = http.send(request);
-
-        if (response.getStatusCode() != 201) {
-            System.debug('The status code returned was not expected: ' +
-                    response.getStatusCode() + ' ' + response.getStatus());
-        } else {
-            Dom.Document doc = response.getBodyDocument();
-            Dom.XmlNode address = doc.getRootElement();
-            Dom.XmlNode get1 = address.getChildElement('content', null);
-            Dom.XmlNode get2 = get1.getChildElement('m:properties', null);
-            String AccId = get2.getChildElement('d:ID', null).getText();
         }
     }
 
